# hexapod-projectCordium_alpha

./: CMakeLists.txt  README.md
JS-kinematics-library/src/solvers/ik/: LinkageIKSolver.js
hexapod_kinematics/: CMakeLists.txt  constants.hpp  geometry.cpp  geometry.hpp  vector.cpp  vector.hpp
hexapod_kinematics/IKinfo/: IKinfo.hpp
hexapod_kinematics/LinkageIKSolver/: LinkageIKSolver.hpp
hexapod_kinematics/geometry/: CMakeLists.txt  geometry.cpp
hexapod_kinematics/include/: CMakeLists.txt  HexapodSupportCheck.hpp  IKSolver.hpp  IKinfo.hpp  constants.hpp  geometry.hpp
hexapod_kinematics/solvers/: CMakeLists.txt
hexapod_kinematics/solvers/ik/: CMakeLists.txt  IKSolver.cpp  IKinfo.cpp  LinkageIKSolver.cpp
hexapod_kinematics/tests/: CMakeLists.txt  geomertyTest.hpp  geometryTest.cpp  test_common.hpp  test_modules.cpp
hexapod_kinematics/vector/: CMakeLists.txt  vector.hpp
oneLegIK/: CMakeLists.txt  main.cpp  main.hpp  oneLegIK.cmake
pimoroni_drivers/drivers/: CMakeLists.txt
pimoroni_drivers/libraries/: CMakeLists.txt
